<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.riskm.androidclient.ui.admin.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
            android:id="@+id/nav_student"
            android:name="com.riskm.androidclient.ui.admin.ui.student.StudentFragment"
            android:label="@string/menu_student"
            tools:layout="@layout/fragment_student">
    </fragment>
    <fragment
            android:id="@+id/nav_log"
            android:name="com.riskm.androidclient.ui.admin.ui.log.LogFragment"
            android:label="@string/menu_log"
            tools:layout="@layout/fragment_log">
    </fragment>
    <fragment
            android:id="@+id/nav_score"
            android:name="com.riskm.androidclient.ui.admin.ui.student.StudentFragment"
            android:label="@string/menu_score"
            tools:layout="@layout/fragment_score">
    </fragment>
    <fragment
            android:id="@+id/nav_subject"
            android:name="com.riskm.androidclient.ui.admin.ui.student.StudentFragment"
            android:label="@string/menu_subject"
            tools:layout="@layout/fragment_subject">
    </fragment>
</navigation>